librocksdb-sys/src/lib.rs


    pub fn rocksdb_approximate_sizes_cf(db: *mut rocksdb_t,
                                        column_family: *mut rocksdb_column_family_handle_t,
                                        num_ranges: c_int,
                                        range_start_key: *const *const c_char,
                                        range_start_key_len: *const size_t,
                                        range_limit_key: *const *const c_char,
                                        range_limit_key_len: *const size_t,
                                        sizes: *mut uint64_t);

    pub fn rocksdb_compact_range(db: *mut rocksdb_t,
                                 start_key: *const c_char,
                                 start_key_len: size_t,
                                 limit_key: *const c_char,
                                 limit_key_len: size_t);

    pub fn rocksdb_compact_range_cf(db: *mut rocksdb_t,
                                    column_family: *mut rocksdb_column_family_handle_t,
                                    start_key: *const c_char,
                                    start_key_len: size_t,
                                    limit_key: *const c_char,
                                    limit_key_len: size_t);

    pub fn rocksdb_delete_file(db: *mut rocksdb_t, name: *const c_char);

    pub fn rocksdb_livefiles(db: *mut rocksdb_t) -> *const rocksdb_livefiles_t;

    pub fn rocksdb_flush(db: *mut rocksdb_t,
                         options: *const rocksdb_flushoptions_t,
                         errptr: *mut *mut c_char);

    pub fn rocksdb_disable_file_deletions(db: *mut rocksdb_t, errptr: *mut *mut c_char);

    pub fn rocksdb_enable_file_deletions(db: *mut rocksdb_t,
                                         force: c_uchar,
                                         errptr: *mut *mut c_char);

    // Management operations

    pub fn rocksdb_destroy_db(options: *const rocksdb_options_t,
                              name: *const c_char,
                              errptr: *mut *mut c_char);

    pub fn rocksdb_repair_db(options: *const rocksdb_options_t,
                             name: *const c_char,
                             errptr: *mut *mut c_char);

    // Iterator

    pub fn rocksdb_iter_destroy(iterator: *mut rocksdb_iterator_t);

    pub fn rocksdb_iter_valid(iterator: *const rocksdb_iterator_t) -> c_uchar;

    pub fn rocksdb_iter_seek_to_first(iterator: *mut rocksdb_iterator_t);

    pub fn rocksdb_iter_seek_to_last(iterator: *mut rocksdb_iterator_t);

    pub fn rocksdb_iter_seek(iterator: *mut rocksdb_iterator_t, k: *const c_char, klen: size_t);

    pub fn rocksdb_iter_seek_for_prev(iterator: *mut rocksdb_iterator_t, k: *const c_char, klen: size_t);

    pub fn rocksdb_iter_next(iterator: *mut rocksdb_iterator_t);

    pub fn rocksdb_iter_prev(iterator: *mut rocksdb_iterator_t);

    pub fn rocksdb_iter_key(iterator: *const rocksdb_iterator_t,
                            klen: *mut size_t)
                            -> *const c_char;

    pub fn rocksdb_iter_value(iterator: *const rocksdb_iterator_t,
                              vlen: *mut size_t)
                              -> *const c_char;

    pub fn rocksdb_iter_get_error(iterator: *const rocksdb_iterator_t, errptr: *mut *mut c_char);

    // Write batch

    pub fn rocksdb_writebatch_create() -> *mut rocksdb_writebatch_t;

    pub fn rocksdb_writebatch_create_from(rep: *const c_char,
                                          size: size_t)
                                          -> *mut rocksdb_writebatch_t;

    pub fn rocksdb_writebatch_destroy(batch: *mut rocksdb_writebatch_t);

    pub fn rocksdb_writebatch_clear(batch: *mut rocksdb_writebatch_t);

    pub fn rocksdb_writebatch_count(batch: *mut rocksdb_writebatch_t) -> c_int;

    pub fn rocksdb_writebatch_put(batch: *mut rocksdb_writebatch_t,
                                  key: *const c_char,
                                  klen: size_t,
                                  val: *const c_char,
                                  vlen: size_t);

    pub fn rocksdb_writebatch_put_cf(batch: *mut rocksdb_writebatch_t,
                                     column_family: *mut rocksdb_column_family_handle_t,
                                     key: *const c_char,
                                     klen: size_t,
                                     val: *const c_char,
                                     vlen: size_t);

    pub fn rocksdb_writebatch_putv(b: *mut rocksdb_writebatch_t,
                                   num_keys: c_int,
                                   keys_list: *const *const c_char,
                                   keys_list_sizes: *const size_t,
                                   num_values: c_int,
                                   values_list: *const *const c_char,
                                   values_list_sizes: *const size_t);

    pub fn rocksdb_writebatch_putv_cf(b: *mut rocksdb_writebatch_t,
                                      column_family: *mut rocksdb_column_family_handle_t,
                                      num_keys: c_int,
                                      keys_list: *const *const c_char,
                                      keys_list_sizes: *const size_t,
                                      num_values: c_int,
                                      values_list: *const *const c_char,
                                      values_list_sizes: *const size_t);

    pub fn rocksdb_writebatch_merge(batch: *mut rocksdb_writebatch_t,
                                    key: *const c_char,
                                    klen: size_t,
                                    val: *const c_char,
                                    vlen: size_t);

    pub fn rocksdb_writebatch_merge_cf(batch: *mut rocksdb_writebatch_t,
                                       column_family: *mut rocksdb_column_family_handle_t,
                                       key: *const c_char,
                                       klen: size_t,
                                       val: *const c_char,
                                       vlen: size_t);

    pub fn rocksdb_writebatch_mergev(b: *mut rocksdb_writebatch_t,
                                     num_keys: c_int,
                                     keys_list: *const *const c_char,
                                     keys_list_sizes: *const size_t,
                                     num_values: c_int,
                                     values_list: *const *const c_char,
                                     values_list_sizes: *const size_t);

    pub fn rocksdb_writebatch_mergev_cf(b: *mut rocksdb_writebatch_t,
                                        column_family: *mut rocksdb_column_family_handle_t,
                                        num_keys: c_int,
                                        keys_list: *const *const c_char,
                                        keys_list_sizes: *const size_t,
                                        num_values: c_int,
                                        values_list: *const *const c_char,
                                        values_list_sizes: *const size_t);

    pub fn rocksdb_writebatch_delete(batch: *mut rocksdb_writebatch_t,
                                     key: *const c_char,
                                     klen: size_t);

    pub fn rocksdb_writebatch_delete_cf(batch: *mut rocksdb_writebatch_t,
                                        column_family: *mut rocksdb_column_family_handle_t,
                                        key: *const c_char,
                                        klen: size_t);

    pub fn rocksdb_writebatch_deletev(b: *mut rocksdb_writebatch_t,
                                      num_keys: c_int,
                                      keys_list: *const *const c_char,
                                      keys_list_sizes: *const size_t);

    pub fn rocksdb_writebatch_deletev_cf(b: *mut rocksdb_writebatch_t,
                                         column_family: *mut rocksdb_column_family_handle_t,
                                         num_keys: c_int,
                                         keys_list: *const *const c_char,
                                         keys_list_sizes: *const size_t);

    pub fn rocksdb_writebatch_put_log_data(batch: *mut rocksdb_writebatch_t,
                                           blob: *const c_char,
                                           len: size_t);

    pub fn rocksdb_writebatch_iterate(batch: *mut rocksdb_writebatch_t,
                                      state: *mut c_void,
                                      put: Option<unsafe extern "C" fn(state: *mut c_void,
                                                                       k: *const c_char,
                                                                       klen: size_t,
                                                                       v: *const c_char,
                                                                       vlen: size_t)>,
                                      deleted: Option<unsafe extern "C" fn(state: *mut c_void,
                                                                           k: *const c_char,
                                                                           klen: size_t)>);

    pub fn rocksdb_writebatch_data(batch: *mut rocksdb_writebatch_t,
                                   size: *mut size_t)
                                   -> *const c_char;

    // Block-based table options

    pub fn rocksdb_block_based_options_create() -> *mut rocksdb_block_based_table_options_t;

    pub fn rocksdb_block_based_options_destroy(options: *mut rocksdb_block_based_table_options_t);

    pub fn rocksdb_block_based_options_set_block_size(options: *mut rocksdb_block_based_table_options_t, v: size_t);

    pub fn rocksdb_block_based_options_set_block_size_deviation(options: *mut rocksdb_block_based_table_options_t, v: c_int);

    pub fn rocksdb_block_based_options_set_block_restart_interval(options: *mut rocksdb_block_based_table_options_t, v: c_int);

    pub fn rocksdb_block_based_options_set_filter_policy(options: *mut rocksdb_block_based_table_options_t, v: *mut rocksdb_filterpolicy_t);

    pub fn rocksdb_block_based_options_set_no_block_cache(options: *mut rocksdb_block_based_table_options_t, v: c_uchar);

    pub fn rocksdb_block_based_options_set_block_cache(options: *mut rocksdb_block_based_table_options_t, v: *mut rocksdb_cache_t);

    pub fn rocksdb_block_based_options_set_block_cache_compressed(options: *mut rocksdb_block_based_table_options_t, v: *mut rocksdb_cache_t);

    pub fn rocksdb_block_based_options_set_whole_key_filtering(options: *mut rocksdb_block_based_table_options_t, v: c_uchar);

    pub fn rocksdb_block_based_options_set_format_version(options: *mut rocksdb_block_based_table_options_t, v: c_int);

    pub fn rocksdb_block_based_options_set_index_type(options: *mut rocksdb_block_based_table_options_t, v: c_int);

    pub fn rocksdb_block_based_options_set_hash_index_allow_collision(options: *mut rocksdb_block_based_table_options_t, v: c_uchar);

    pub fn rocksdb_block_based_options_set_cache_index_and_filter_blocks(options: *mut rocksdb_block_based_table_options_t, v: c_uchar);

    pub fn rocksdb_block_based_options_set_pin_l0_filter_and_index_blocks_in_cache
        (options: *mut rocksdb_block_based_table_options_t,
         v: c_uchar);

    pub fn rocksdb_block_based_options_set_skip_table_builder_flush(options: *mut rocksdb_block_based_table_options_t, skip_table_builder_flush: c_uchar);

    pub fn rocksdb_options_set_block_based_table_factory(opt: *mut rocksdb_options_t, table_options: *mut rocksdb_block_based_table_options_t);

    // Cuckoo table options

    pub fn rocksdb_cuckoo_options_create() -> *mut rocksdb_cuckoo_table_options_t;

    pub fn rocksdb_cuckoo_options_destroy(options: *mut rocksdb_cuckoo_table_options_t);
